Fixed minor style issues, overflows on small screen specifically for live and landing pages

--- a/smartbeach-project-prototype/src/Landing.css
+++ b/smartbeach-project-prototype/src/Landing.css
@@ -1,150 +1,178 @@
 .landing-live-wrapper {
-    background-image: url("../src/assets/images/background.jpeg");
+  background-image: url("../src/assets/images/background.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.weather-conditions {
+  position: absolute;
+  top: 425px;
+  left: calc(99% - 350px);
+  text-align: center;
+  font-family: "gilroy-black";
+}
+
+.weather-conditions p {
+  font-weight: bold;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.weather-conditions a {
+  display: block;
+  background-color: lightskyblue;
+  color: white;
+  padding: 1rem 1.25rem;
+  border-radius: 2rem;
+  font-size: 20px;
+  text-decoration: none;
+  width: 150px;
+  text-align: center;
+  margin: auto;
+
+  -webkit-box-shadow: 0 0 5px #b2cdebff;
+  -moz-box-shadow: 0 0 5px #b2cdebff;
+  box-shadow: 0 0 5px #b2cdebff;
+}
+
+.image-container iframe {
+  border-radius: 20px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  margin-left: -180px;
+}
+
+.image-container h1 {
+  position: absolute;
+  top: 650px;
+  left: 120px;
+}
+
+/* Media query for smaller screens */
+@media screen and (max-width: 1100px) {
+  main {
+    margin: 0;
+    padding: 0;
+  }
+
+  .landing-live-wrapper {
+    background-image: url("../src/assets/images/background.png");
     background-size: cover;
     background-repeat: no-repeat;
+    max-width: 100%;
+    max-height: 100%;
   }
-  
+  /* Weather conditions section */
   .weather-conditions {
-    position: absolute;
-    top: 425px;
-    left: calc(99% - 350px);
     text-align: center;
-    font-family: 'gilroy-black';
+    background-color: #f7f7f7c9;
+    padding: 20px;
+    margin-top: -80px;
+    margin-left: -45px;
+    border-radius: 10px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+    margin-bottom: 80px;
   }
-  
+
   .weather-conditions p {
     font-weight: bold;
-    font-size: 2rem;
-    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: -10px;
   }
-  
+
   .weather-conditions a {
-    display: block;
+    display: inline-block;
     background-color: lightskyblue;
     color: white;
     padding: 1rem 1.25rem;
     border-radius: 2rem;
-    font-size: 20px;
+    font-size: 18px;
     text-decoration: none;
     width: 150px;
     text-align: center;
-    margin: auto;
-  
-    -webkit-box-shadow: 0 0 5px #b2cdebff;
-    -moz-box-shadow: 0 0 5px #b2cdebff;
+    margin-top: 1rem;
     box-shadow: 0 0 5px #b2cdebff;
   }
-  
+
   .image-container iframe {
+    width: 480px;
+    height: 250px;
     border-radius: 20px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-    margin-left: -180px;
+    margin-bottom: 55px;
   }
-  
+
+  .image-container {
+    max-width: 600px;
+    height: auto;
+    margin-left: 180px;
+    margin-top: -159px;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .footer {
+    background-color: #c4e9fff7;
+    position: relative;
+    /* margin-top: 0; */
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .footer {
+    background-color: #c4e9fff7;
+    position: relative;
+    /* margin-top: 0; */
+  }
+  .image-container iframe {
+    width: 90%;
+    left: 0;
+    margin-left: 0;
+  }
+  .image-container {
+    width: 90vw;
+    margin-left: 25px;
+  }
+  .live-hero {
+    display: inline-block;
+    justify-content: center;
+  }
+  .weather-conditions {
+    margin-left: 0;
+  }
+}
+
+@media screen and (min-width: 1126px) and (max-width: 1325px) {
+  div.image-container {
+    margin-left: 100px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 820px) {
+  div.image-container {
+    width: 70vw;
+    margin-left: 25px;
+  }
+  .weather-conditions {
+    margin-left: -25%;
+  }
+}
+
+@media screen and (min-width: 1020px) and (max-width: 1024px) {
   .image-container h1 {
     position: absolute;
-    top: 650px;
-    left: 120px;
+    top: 450px;
+    left: 90px;
   }
-  
-  /* Media query for smaller screens */
-  @media screen and (max-width: 1100px) {
-      main {
-          margin: 0;
-          padding: 0;
-      }
-  
-      .landing-live-wrapper {
-          background-image: url("../src/assets/images/background.png");
-          background-size: cover;
-          background-repeat: no-repeat;
-          max-width: 100%;
-          max-height: 100%;
-        }
-    /* Weather conditions section */
-    .weather-conditions {
-      text-align: center;
-      background-color: #f7f7f7c9;
-      padding: 20px;
-      margin-top: -80px;
-      margin-left: -45px;
-      border-radius: 10px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-      margin-bottom: 80px;
-    }
+  .image-container {
+    max-width: 600px;
+    height: auto;
+    margin-left: 180px;
+    margin-top: -50px;
+  }
+}
 
-    .weather-conditions p {
-      font-weight: bold;
-      font-size: 1.5rem;
-      margin-bottom: -10px;
-    }
-  
-    .weather-conditions a {
-      display: inline-block;
-      background-color: lightskyblue;
-      color: white;
-      padding: 1rem 1.25rem;
-      border-radius: 2rem;
-      font-size: 18px;
-      text-decoration: none;
-      width: 150px;
-      text-align: center;
-      margin-top: 1rem;
-      box-shadow: 0 0 5px #b2cdebff;
-    }
-  
-    .image-container iframe {
-      width: 480px;
-      height: 250px;
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-      margin-bottom: 55px;
-    }
-  
-    .image-container {
-      max-width: 600px;
-      height: auto;
-      margin-left: 180px;
-      margin-top: -159px;
-    }
+@media screen and (min-width: 1109px) and (max-width: 1126px) {
+  .image-container {
+    margin-left: 130px;
   }
-
-  @media screen and (max-width: 1366px) {
-    .footer {
-      background-color: #c4e9fff7;
-      position: relative;
-      /* margin-top: 0; */
-    }
-  }
-  
-  @media screen and (max-width: 900px) {
-    .footer {
-      background-color: #c4e9fff7;
-      position: relative;
-      /* margin-top: 0; */
-
-    }
-    .image-container iframe {
-      width: 90%;
-      left: 0;
-      margin-left: 0;
-    }
-    .image-container {
-      width: 100vw;
-      margin-left: 25px;
-  }
-    .live-hero {
-      display: inline-block;
-      justify-content: center;
-    }
-    .weather-conditions {
-      margin-left: 0;
-    }
-  }
-
-  @media screen and (min-width: 1126px) and (max-width: 1325px) {
-    div.image-container {
-      margin-left: 100px;
-    }
-  }
-  
+}
