--- a/smartbeach-project-prototype/src/Live.css
+++ b/smartbeach-project-prototype/src/Live.css
@@ -188,3 +188,13 @@
   
   }
 }
+
+
+
+@media screen and (max-width: 900px) {
+  .live-info::after {
+    bottom: -50px;
+    right: 0px;
+}
+}
+
